@@ -189,7 +189,7 @@ _Other
 __end
 
 Credits: The plotting commands were provided by
-John D. Hunter <jdhunter@ace.bsd.uhicago.edu>
+John D. Hunter <jdhunter@ace.bsd.uchicago.edu>
 
 Most of the other commands are from Numeric, MLab and FFT, with the
 exception of those in mlab.py provided by matplotlib.
@@ -1532,6 +1532,16 @@ def annotate(*args, **kwargs):
     draw_if_interactive()
 annotate.__doc__ = "annotate(artist, s, loc=None, padx='auto', pady='auto', autopad=3, lineprops=None,**props)\n\n"+Annotation.__init__.__doc__
 
+### Deprecated functions:
+def scatter_classic(*args, **kwargs):
+    return gca().scatter_classic(*args, **kwargs)
+if Axes.scatter_classic.__doc__ is not None:
+    scatter_classic.__doc__ = _shift_string(Axes.scatter_classic.__doc__)
+
+def pcolor_classic(*args, **kwargs):
+    return gca().pcolor_classic(*args, **kwargs)
+if Axes.pcolor_classic.__doc__ is not None:
+    pcolor_classic.__doc__ = _shift_string(Axes.pcolor_classic.__doc__)
 
 ### Do not edit below this point
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -2078,27 +2088,6 @@ def scatter(*args, **kwargs):
     return ret
 if Axes.scatter.__doc__ is not None:
     scatter.__doc__ = _shift_string(Axes.scatter.__doc__) + """
-Addition kwargs: hold = [True|False] overrides default hold state"""
-
-# This function was autogenerated by boilerplate.py.  Do not edit as
-# changes will be lost
-def scatter_classic(*args, **kwargs):
-    # allow callers to override the hold state by passing hold=True|False
-    b = ishold()
-    h = popd(kwargs, 'hold', None)
-    if h is not None:
-        hold(h)
-    try:
-        ret =  gca().scatter_classic(*args, **kwargs)
-        draw_if_interactive()
-    except:
-        hold(b)
-        raise
-
-    hold(b)
-    return ret
-if Axes.scatter_classic.__doc__ is not None:
-    scatter_classic.__doc__ = _shift_string(Axes.scatter_classic.__doc__) + """
 Addition kwargs: hold = [True|False] overrides default hold state"""
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
